Fixed radio button alignment
Fixed radio button alignment via css.

--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,17 @@ body {
 h2 {
   font-family: "Open Sans";
   margin: 20px 10px;
+
+}
+#answer{
+  display:inline-block;
 }
 
+b{
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+}
 #wrapper {
   width: 55%;
   height: 30%;
@@ -61,9 +70,10 @@ h2 {
     margin: 20px 10px;
   }
   p{
+    text-align:center;
     font-size: 20px;
   }
-  }
+
 }
 
 /* On screens that are 600px wide or less, make the columns stack on top of each other instead of next to each other */
@@ -82,6 +92,7 @@ h2 {
     text-transform: uppercase;
     border-style: solid;
     margin: 10px 5px;
+    display:inline-block;
   }
   .button{
     width: 25%;
@@ -112,9 +123,21 @@ h2 {
 
 input[type="radio"]{
   margin: 5px 5px;
-  vertical-align: left;
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
 }
 
+form{
+  display: inline-block;
+  vertical-align: top;
+  text-align: left;
+}
+#logo{
+  display: inline-block;
+  vertical-align: bottom;
+  text-align: right;
+}
 #reset, #next{
   color: #FFFFFF;
   background-color: #FF0000;
@@ -131,7 +154,6 @@ input[type="radio"]{
 #next:active, #rest:active{
   background-color: #86a4c4;
 }
-
 #next:disabled{
   background-color: #808080;
 }
